--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/AI-Toolbox"]
 	path = libs/AI-Toolbox
-	url = https://github.com/Svalorzen/AI-Toolbox
+	url = https://github.com/Svalorzen/AI-Toolbox.git
